--- a/Application/client/src/index.html
+++ b/Application/client/src/index.html
@@ -15,6 +15,7 @@
         <button onclick="uploadFile()" class="btn btn-primary">Upload</button>
         <div id="response" class="mt-3"></div>
         <div id="pdfContainer" class="mt-3"></div>
+        <audio id="audioPlayer" controls style="display: none; width: 100%;"></audio>
     </div>
 
     <script>
@@ -41,6 +42,7 @@
                 formData.append('file', file);
                 const responseDiv = document.getElementById("response");
                 const pdfDiv = document.getElementById("pdfContainer");
+                const audioPlayer = document.getElementById("audioPlayer");
                 responseDiv.innerHTML = "<br>";
                 pdfDiv.innerHTML = "";
                 fetch('/upload', {
@@ -49,6 +51,12 @@
                 })
                 .then(response => response.json())
                 .then(data => {
+                  if (data.audioUrl) {
+                        audioPlayer.src = '/download/' + data.audioUrl;
+                        audioPlayer.style.display = "block"; // Show the audio player
+                        alert(data.audioUrl)
+                    }
+                  
                     if(data.instrumentPrediction){
                         var pred = data.instrumentPrediction;
                         const predictionText = document.createElement("div");
