auto pdf generation

--- a/Application/client/src/index.html
+++ b/Application/client/src/index.html
@@ -16,6 +16,9 @@
         <div id="response" class="mt-3"></div>
         <div id="pdfContainer" class="mt-3"></div>
         <audio id="audioPlayer" controls style="display: none; width: 100%;"></audio>
+        <div id="spinner" class="spinner-border text-primary" style="display: none;" role="status">
+          <span class="sr-only">Loading...</span>
+      </div>
     </div>
 
     <script>
@@ -36,7 +39,10 @@
         // Handle file uploads
         function uploadFile() {
             var input = document.getElementById('fileInput');
+            var spinner = document.getElementById('spinner'); // Get the spinner element
+
             if (input.files.length > 0) {
+                spinner.style.display = 'block';
                 var file = input.files[0];
                 var formData = new FormData();
                 formData.append('file', file);
@@ -51,18 +57,19 @@
                 })
                 .then(response => response.json())
                 .then(data => {
-                  if (data.audioUrl) {
+                    spinner.style.display = 'none'; // Hide upload spinner after upload completes
+
+                    if (data.audioUrl) {
                         audioPlayer.src = '/download/' + data.audioUrl;
                         audioPlayer.style.display = "block"; // Show the audio player
-                        // alert(data.audioUrl)
                     }
-                  
+
                     if(data.instrumentPrediction){
-                        var pred = data.instrumentPrediction;
                         const predictionText = document.createElement("div");
-                        predictionText.textContent = "Instrument Prediction: " + pred;
+                        predictionText.textContent = "Instrument Prediction: " + data.instrumentPrediction;
                         responseDiv.appendChild(predictionText);
                     }
+
                     if (data.midiId) {
                         const downloadMidiBtn = document.createElement("button");
                         downloadMidiBtn.innerText = "Download MIDI";
@@ -71,40 +78,103 @@
                         };
                         responseDiv.appendChild(downloadMidiBtn);
 
-                        const pdfButton = document.createElement("button");
-                        pdfButton.innerText = "Get PDF";
-                        pdfButton.onclick = function() {
-                            pdfDiv.innerHTML = "";
-
-                            //create form data to post
-                            let postBody = new FormData();
-                            postBody.append('midiId', data.midiId);
-                            postBody.append('instrument', pred);
-
-                            fetch(`/getPdf`, {
-                                method: 'POST',
-                                body: postBody,
-                            })
-                                .then(response => response.blob())
-                                .then(blob => {
-                                    const blobUrl = URL.createObjectURL(blob);
-                                    const pdfObject = document.createElement("object");
-                                    pdfObject.data = blobUrl;
-                                    pdfObject.type = "application/pdf";
-                                    pdfObject.width = "100%";
-                                    pdfObject.height = "500px"; // Adjust size as needed
-                                    pdfDiv.appendChild(pdfObject);
-                                })
-                                .catch(error => console.error("error: ",error));
-                        };
-                        responseDiv.appendChild(pdfButton);
+                        // Automatically start PDF generation
+                        generatePdf(data.midiId, data.instrumentPrediction, pdfDiv);
                     }
                 })
-                .catch(error => console.error('Error:', error));
+                .catch(error => {
+                console.error('Error:', error);
+                spinner.style.display = 'none';
+                });
             } else {
                 alert("Please select a file first.");
             }
+        }
+
+function uploadFile() {
+    var input = document.getElementById('fileInput');
+    var spinner = document.getElementById('spinner');
+
+    if (input.files.length > 0) {
+        spinner.style.display = 'block';
+        var file = input.files[0];
+        var formData = new FormData();
+        formData.append('file', file);
+        const responseDiv = document.getElementById("response");
+        const pdfDiv = document.getElementById("pdfContainer");
+        const audioPlayer = document.getElementById("audioPlayer");
+
+        responseDiv.innerHTML = "<br>";
+        pdfDiv.innerHTML = "";
+
+        fetch('/upload', {
+            method: 'POST',
+            body: formData,
+        })
+        .then(response => response.json())
+        .then(data => {
+            spinner.style.display = 'none'; // Hide upload spinner after upload completes
+
+            if (data.audioUrl) {
+                audioPlayer.src = '/download/' + data.audioUrl;
+                audioPlayer.style.display = "block"; // Show the audio player
+            }
+
+            if(data.instrumentPrediction){
+                const predictionText = document.createElement("div");
+                predictionText.textContent = "Instrument Prediction: " + data.instrumentPrediction;
+                responseDiv.appendChild(predictionText);
+            }
+
+            if (data.midiId) {
+                const downloadMidiBtn = document.createElement("button");
+                downloadMidiBtn.innerText = "Download MIDI";
+                downloadMidiBtn.onclick = function() {
+                    window.location.href = `/download/${data.midiId}`;
+                };
+                responseDiv.appendChild(downloadMidiBtn);
+
+                // Automatically start PDF generation
+                generatePdf(data.midiId, data.instrumentPrediction, pdfDiv);
+            }
+        })
+        .catch(error => {
+          console.error('Error:', error);
+          spinner.style.display = 'none';
+        });
+    } else {
+        alert("Please select a file first.");
     }
+}
+
+function generatePdf(midiId, instrument, pdfDiv) {
+    const spinner = document.getElementById('spinner'); // Reuse the same spinner or use a different one for PDF generation
+    spinner.style.display = 'block'; // Show spinner during PDF generation
+
+    let postBody = new FormData();
+    postBody.append('midiId', midiId);
+    postBody.append('instrument', instrument);
+
+    fetch(`/getPdf`, {
+        method: 'POST',
+        body: postBody,
+    })
+    .then(response => response.blob())
+    .then(blob => {
+        spinner.style.display = 'none'; // Hide spinner once PDF is ready
+        const blobUrl = URL.createObjectURL(blob);
+        const pdfObject = document.createElement("object");
+        pdfObject.data = blobUrl;
+        pdfObject.type = "application/pdf";
+        pdfObject.width = "100%";
+        pdfObject.height = "500px"; // Adjust size as needed
+        pdfDiv.appendChild(pdfObject);
+    })
+    .catch(error => {
+        console.error("error: ", error);
+        spinner.style.display = 'none';
+    });
+}
     </script>
 </body>
 </html>
